# sawtooth-poet2

./: .gitignore  Jenkinsfile  build.sh  clean.sh  demo-sgx.yaml  demo.yaml  demo3.yaml  demo5.yaml  docker-compose-installed.yaml  docker-compose-sgx.yaml  docker-compose.yaml  ias_proxy.dockerfile  poet2-engine.dockerfile  poet2-validator-integration.yaml  poet2-validator.dockerfile  unit-poet2.yaml
packaging/systemd/: poet2.service
src/: poet2-cli.yaml
src/CLI/: Dockerfile  poet2  setup.py
src/CLI/cli/: __init__.py  enclave.py  main.py  poet_enclave_module_wrapper.py  registration.py
src/CLI/poet2_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/CLI/protos/: __init__.py  validator_registry.py
src/CLI/signing/: setup.py
src/CLI/state/: __init__.py  settings_view.py
src/core/: Cargo.toml  Dockerfile-installed  docker-compose.yaml  poet-2-tests.dockerfile  unit_poet_2.yaml
src/core/src/: check_consensus.rs  consensus_state.rs  consensus_state_store.rs  driver.rs  enclave_sgx.rs  enclave_sim.rs  engine.rs  fork_resolver.rs  lmdb.rs  main.rs  poet2_util.rs  registration.rs  service.rs  settings_view.rs  validator_proto.rs  validator_registry_proto.rs  validator_registry_tp.rs
src/core/src/database/: database.rs  lmdb.rs  mod.rs
src/core/src/tests/resources/: dummy_file.txt
src/ias_client/: Cargo.toml
src/ias_client/src/: client_utils.rs  ias_client.rs  lib.rs
src/ias_client/src/tests/: mod.rs
src/ias_proxy/: Cargo.toml
src/ias_proxy/src/: ias_proxy.rs  ias_proxy_server.rs  lib.rs  lru_cache.rs  main.rs
src/ias_proxy/src/ias_proxy_server/: mod.rs
src/ias_proxy/src/lru_cache/: mod.rs
src/ias_proxy/src/tests/packaging/: ias_proxy.toml.example
src/sgx/: CMakeLists.txt  README.md
src/sgx/libpoet_bridge/: enclave.cpp  enclave.h  poet.cpp  poet.h  utils.h
src/sgx/libpoet_enclave/: poet_enclave.cpp  poet_enclave.edl  poet_enclave_defs.h
src/sgx/libpoet_shared/: error.h  poet.h
src/sgx/libpoet_shared/enclave/: shared_library.h
src/sgx/poet_enclave_sgx/: poet.cpp  poet_enclave.h  wait_certificate.cpp
src/sgx/rust_sgx_bridge/: rust_sgx_bridge.cpp  rust_sgx_bridge.h
src/sgx/rust_sgxffi/src/: ffi.rs  lib.rs
src/sgx/testEnclave/: CMakeLists.txt  testEnclave.cpp  testEnclave.h
src/validator-registry-tp/: Cargo.toml
src/validator-registry-tp/src/: main.rs  validator_registry_proto.rs  validator_registry_tp.rs
