# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "poet2"
version = "0.1.0"
authors = ["Intel Corporation"]
description = "PoET2 consensus algorithm for Sawtooth"

[dependencies]
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
rand = "0.4.2"
log = "0.3.0"
log4rs = "0.7.0"
protobuf="2.0"
zmq = { git = "https://github.com/erickt/rust-zmq", branch = "release/v0.8" }
num = "0.1.42"
lazy_static = "1.0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "~2.27.0"
lmdb-zero = ">=0.4.1"
rust-crypto = "^0.2"
bincode = "1.0.1"
rust_sgxffi = { path = "../sgx/rust_sgxffi"}
