[package]
name = "ias_proxy"
version = "0.1.0"
authors = ["Intel Corporation"]
description = "Proxy server for IAS"

[dependencies]
hyper = "0.12.11"
tokio-core = "0.1.17"
serde_json = "1.0"
clap = "~2.27.0"
log = "0.3.0"
log4rs = "0.7.0"
toml = "0.4.8"
futures = "0.1.24"
ias_client = { path = "../ias_client" }
serde_derive = "1.0.79"
serde = "1.0"
lazy_static="1.1.0"

[lib]
# The name of a target is the name of the library that will be generated.
name = "ias_proxy"

# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

[[bin]]
# The name of binary created, note ias_proxy is a binary
name = "ias_proxy"

# This field point where the binary can be built (place of main)
path = "src/main.rs"
